--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
     <p align=center><img src=Flag_of_France.jfif></p>
     <p align=center><img src=France-map-boundaries-cities-locator.png></p>
     <h2>Culture</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=GXMZc9xb30A title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/GXMZc9xb30A?si=qjhSkoq2m8VIb9Vz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
      <h2>Food</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=r-gv0sry-_Y title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/r-gv0sry-_Y?si=UrnZ0KFYueJDIaUP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h2>Landmarks</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=BZLZyX3JdEM title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
- </body>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/BZLZyX3JdEM?si=OPUJl87EckDFBLDi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </body>
 </html>
